# sporttery-ev-analyzer

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  sports_lottery_value_betting_strategy.md
.github/workflows/: ci.yml
config/: world_cup_2026_team_aliases.json
skills/sporttery-ev/: SKILL.md
src/sporttery_ev_analyzer/: __init__.py  analysis.py  backtest.py  calculations.py  cli.py  io_utils.py  normalization.py  pinnacle_api.py  sources.py
tests/: test_analysis.py  test_backtest.py  test_calculations.py  test_cli.py  test_normalization.py  test_pinnacle_api.py
tests/fixtures/: pinnacle_three_markets_fixture.json  sporttery_official_three_markets_fixture.json
