[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sporttery-ev-analyzer"
version = "0.1.0"
description = "Local +EV analyzer for Sporttery odds snapshots."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sporttery-ev = "sporttery_ev_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
